--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@nextui-org/card": "^2.0.33",
+    "@nextui-org/divider": "^2.0.31",
+    "@nextui-org/image": "^2.0.31",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
     "framer-motion": "^11.3.30",
