--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/card": "^2.0.33",
     "@nextui-org/divider": "^2.0.31",
     "@nextui-org/image": "^2.0.31",
+    "@nextui-org/input": "^2.2.4",
     "@nextui-org/modal": "^2.0.39",
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
