--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/system": "^2.2.5",
     "@nextui-org/theme": "^2.2.9",
     "framer-motion": "^11.3.30",
+    "lucide-react": "^0.436.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
